--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,9 +62,10 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: .clang-tidy-cache.json
-          key: ${{ runner.os }}-clang-tidy-${{ github.ref }}
+          key: ${{ runner.os }}-clang-tidy-${{ github.ref }}-${{ github.run_id }}
           restore-keys: |
-            ${{ runner.os }}-clang-tidy-dev
+            ${{ runner.os }}-clang-tidy-${{ github.ref }}-
+            ${{ runner.os }}-clang-tidy-refs/heads/main
 
       - name: Initialize empty clang-tidy cache
         if: steps.cache-restore.outputs.cache-hit != 'true'
@@ -170,12 +171,23 @@ jobs:
             echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
+      - name: Debug cache state
+        run: |
+          echo "Cache hit: ${{ steps.cache-restore.outputs.cache-hit }}"
+          echo "Cache key: ${{ runner.os }}-clang-tidy-${{ github.ref }}-${{ github.run_id }}"
+          if [ -f .clang-tidy-cache.json ]; then
+            echo "Cache file contents:"
+            cat .clang-tidy-cache.json
+          else
+            echo "No cache file found"
+          fi
+
       - name: Save clang-tidy cache
         if: always() && steps.cache-changed.outputs.changed == 'true'
         uses: actions/cache/save@v4
         with:
           path: .clang-tidy-cache.json
-          key: ${{ runner.os }}-clang-tidy-${{ github.ref }}
+          key: ${{ runner.os }}-clang-tidy-${{ github.ref }}-${{ github.run_id }}
 
       - name: Check for linting failures
         if: always()
