--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -3,4 +3,5 @@ target_sources(main PRIVATE
     src/utils/to_string.cpp
     src/utils/utils.cpp
     src/utils/uuid.cpp
+    src/utils/ingredients_availability.cpp
 )
