--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ API_URL=localhost:8000
 WEBHOOK_PORT=8443
 WEBHOOK_HOST=https://mydomain.com
 WEBHOOK_SECRET=secret
+WEBHOOK_CERTIFICATE_PATH=cert.pem
