refactor: API client (remove redundant methods and refactor others)

--- a/src/backend/CMakeLists.txt
+++ b/src/backend/CMakeLists.txt
@@ -1,6 +1,8 @@
 target_sources(main PRIVATE
     src/backend/api/base.cpp
 
+    src/backend/api/publicity_filter.cpp
+
     src/backend/api/storages.cpp
     src/backend/api/ingredients.cpp
     src/backend/api/users.cpp
