--- a/src/handlers/CMakeLists.txt
+++ b/src/handlers/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(main PRIVATE
 
     src/handlers/personal_account/recipe/search_ingredients.cpp
     src/handlers/personal_account/recipe/view.cpp
+    src/handlers/personal_account/recipe/publication_history.cpp
 
     src/handlers/personal_account/view.cpp
 
