feat: ingredients moderation status (not done)

--- a/src/backend/CMakeLists.txt
+++ b/src/backend/CMakeLists.txt
@@ -14,4 +14,5 @@ target_sources(main PRIVATE
     src/backend/models/user.cpp
     src/backend/models/recipe.cpp
     src/backend/models/shopping_list.cpp
+    src/backend/models/publication_request_status.cpp
 )
