feat: ui for request history updated

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -4,4 +4,5 @@ target_sources(main PRIVATE
     src/utils/utils.cpp
     src/utils/uuid.cpp
     src/utils/ingredients_availability.cpp
+    src/utils/serialization.cpp
 )
