--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(main PRIVATE
     src/render/personal_account/recipe/publication_history.cpp
 
     src/render/personal_account/view.cpp
+    src/render/personal_account/request_history.cpp
 
     src/render/recipe/add_storage.cpp
     src/render/recipe/view.cpp
