--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(main PRIVATE
     src/render/personal_account/ingredients_list/create.cpp
     src/render/personal_account/ingredients_list/publish.cpp
     src/render/personal_account/ingredients_list/view.cpp
+    src/render/personal_account/ingredients_list/delete.cpp
 
     src/render/personal_account/recipes_list/create.cpp
     src/render/personal_account/recipes_list/view.cpp
