feat: add simple recipe view

--- a/src/render/CMakeLists.txt
+++ b/src/render/CMakeLists.txt
@@ -41,4 +41,6 @@ target_sources(main PRIVATE
     src/render/storages_selection/view.cpp
 
     src/render/recipes_search/view.cpp
+
+    src/render/recipe/view.cpp
 )
