--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,8 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: .clang-tidy-cache.json
-          key: ${{ runner.os }}-clang-tidy-${{ github.ref }}-${{ github.run_id }}
+          key: 
+            ${{ runner.os }}-clang-tidy-${{ github.ref }}-${{ github.run_id }}
           restore-keys: |
             ${{ runner.os }}-clang-tidy-${{ github.ref }}-
             ${{ runner.os }}-clang-tidy-refs/heads/dev
